k8s/mongodb-databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-artist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-artist
  template:
    metadata:
      labels:
        app: mongodb-artist
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
      containers:
        - name: mongodb-artist
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-artist-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-artist-storage
          persistentVolumeClaim:
            claimName: mongodb-artist-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-artist-service
spec:
  selector:
    app: mongodb-artist
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-user
  template:
    metadata:
      labels:
        app: mongodb-user
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
      containers:
        - name: mongodb-user
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-user-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-user-storage
          persistentVolumeClaim:
            claimName: mongodb-user-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-user-service
spec:
  selector:
    app: mongodb-user
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-venue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-venue
  template:
    metadata:
      labels:
        app: mongodb-venue
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
      containers:
        - name: mongodb-venue
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-venue-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-venue-storage
          persistentVolumeClaim:
            claimName: mongodb-venue-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-venue-service
spec:
  selector:
    app: mongodb-venue
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
