k8s/nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: artist-service-np
spec:
  selector:
    app: artist-service
  ports:
    - port: 3004
      targetPort: 3004
      nodePort: 30004
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: event-service-np
spec:
  selector:
    app: event-service
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-np
spec:
  selector:
    app: payment-service
  ports:
    - port: 3006
      targetPort: 3006
      nodePort: 30006
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service-np
spec:
  selector:
    app: booking-service
  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30003
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-np
spec:
  selector:
    app: inventory-service
  ports:
    - port: 3007
      targetPort: 3007
      nodePort: 30007
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-np
spec:
  selector:
    app: user-service
  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30002
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: venue-service-np
spec:
  selector:
    app: venue-service
  ports:
    - port: 3005
      targetPort: 3005
      nodePort: 30005
  type: NodePort
