k8s/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artist-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artist-service
  template:
    metadata:
      labels:
        app: artist-service
    spec:
      containers:
        - name: artist-service
          image: tiransarith/artist_service:v1
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: artist-service
spec:
  selector:
    app: artist-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: tiransarith/event_service:v1
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: tiransarith/payment_service:v1
          ports:
            - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 3006
      targetPort: 3006
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: tiransarith/ticket_service:v1
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: tiransarith/user_service:v1
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: venue-service
  template:
    metadata:
      labels:
        app: venue-service
    spec:
      containers:
        - name: venue-service
          image: tiransarith/venue_service:v1
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: venue-service
spec:
  selector:
    app: venue-service
  ports:
    - port: 3005
      targetPort: 3005
  type: ClusterIP
